--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hoobank.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Osama Al-Mangathi" />
+    <meta name="description" content="The Next Generation of Payment Methon" />
+    <title>HooBank</title>
   </head>
   <body>
     <div id="root"></div>
